k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mentalhealth
  labels:
    name: mentalhealth
    environment: production
